1、新增RxView防止快速点击方法 2、新增自定义注解框架，实现自动校验实体类参数