@@ -13,11 +13,14 @@ import com.gyf.immersionbar.ImmersionBar;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 import dagger.hilt.android.AndroidEntryPoint;
 import pers.fz.mvvm.base.BaseActivity;
 import pers.fz.mvvm.bean.BannerBean;
+import pers.fz.mvvm.util.apiUtil.DateUtil;
 import pers.fz.mvvm.util.apiUtil.DensityUtil;
+import pers.fz.mvvm.util.apiUtil.RxView;
 import pers.fz.mvvm.wight.Code;
 import pers.fz.mvvm.wight.customlayout.StarBar;
 import pers.fz.mvvm.wight.picDialog.PicShowDialog;
@@ -48,12 +51,15 @@ public class WightActivity extends BaseActivity<WightViewModel, ActivityWightBin
                 new BannerBean("https://img1.baidu.com/it/u=805676447,2282344960&fm=253&fmt=auto&app=120&f=JPEG?w=1280&h=800"),
                 new BannerBean("https://n.sinaimg.cn/translate/125/w690h1035/20180414/Rb2D-fzcyxmu4457695.jpg"),
                 new BannerBean("https://bkimg.cdn.bcebos.com/pic/21a4462309f7905298220197bda2c0ca7bcb0a467f42")));
-        binding.cornersImageView.setOnClickListener(v -> new PicShowDialog(this, Arrays.asList(
+        binding.cornersImageView.setOnClickListener(v -> new PicShowDialog(this, List.of(
                 new ImageInfo(imageUrl, 1920, 1080)
         ), 0).show());
         binding.imageCode.setImageBitmap(Code.getInstance().createBitmap());
         binding.imageCode.setOnClickListener(v->{
             binding.imageCode.setImageBitmap(Code.getInstance().createBitmap());
+        });
+        RxView.setOnClickListener(binding.cornerButton,3000,view->{
+           showToast(DateUtil.getDateTimeFromMillis(System.currentTimeMillis()));
         });
     }
 
